slow progress fixing nav text spacing

--- a/responsive_web_design/css/styles.css
+++ b/responsive_web_design/css/styles.css
@@ -79,6 +79,9 @@ footer {
     margin-bottom: 5px;
     margin-left: auto;
     margin-right: auto;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     padding: 10px 20px;
     text-align: center;
     border: 2px ridge #737373;
